[#141] Adding new api /readAddressAttributes
